# export-kintone-app-settings

./: .gitignore  .pylintrc  pyproject.toml
export_kintone_app_settings/: __init__.py  __main__.py  kintone.py
tests/: test_export_kintone_app_settings.py
