[tool.poetry]
name = "export-kintone-app-settings"
version = "0.3.2"
description = ""
authors = ["Masato Morita <mamorita@m-sol.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.5.2"

[tool.poetry.scripts]
export_kintone_app_settings = 'export_kintone_app_settings:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
